fix(SideChannelNav): fix text alignment for desktop screens

--- a/src/components/Layout/SideChannelNav/styles.module.css
+++ b/src/components/Layout/SideChannelNav/styles.module.css
@@ -108,6 +108,7 @@
       @media (--sm-up) {
         justify-content: end;
         padding: var(--sp8) var(--sp10);
+        text-align: end;
       }
 
       &:hover {
